Development
	Error result in send_command
	GUI enhancements from Dmitry Stropaloff <helions8_AT_gmail.com> 
	Change packing order for volume control and FS button so that they are aligned right
	Make sure proper controls are visible when embedded
	Make windows keep from popping when embedded
	Protect gtk_set_size_request calls
	Create autobuilding spec file
	Make fullscreen button appear when in fullscreen and hide it when window is small
	Version bump
	Try and make keyboard controls work in XEmbed mode
0.4.4
	Experamental dvdnav:// support by starting gnome-mplayer 
		with dvdnav:// as the filename to play
	Set noconsolecontrols option
	Fix tooltip on Play/Pause
	Hook up Normal/2:1/1:2 View menu options
	Keep F accelerator on right click menu, but add CTRL-F to View->Fullscreen
	Change accelerator CTRL-F to just F
	Add accelerator C to show/hide controls.
	Add some basic error dialogs when something can't be opened
	Create View Menu, but nothing is hooked up
	Fix video window size problem when playing a video playlist 
		(window grew vertically with each successive video)
	Disable window resize when a video is not loaded and playing
	Add verbose option so you can see the mplayer output
	Add Debian directory in
	Convert Play and Pause Buttons to single Play/Pause Button
	Fix new problem with audio resize issues
	Add Open DVD / Open Audio CD to File Menu
	Fix some audio resize issue
	Remove hookup_x11_events as it is no longer needed
	Use allocation method to set media size rather than expose
	Setup player to protect aspect ratio of media being played
	Cleanup unused callbacks
	Cleanup extra pixbufs
	Try to use icons from theme, but if that fails, use the default set
	Add default icons to build
	If playing audio after playing video, shrink window
	Disable Fullscreen option when no video is present
	Fix problems with icons not being found in theme
	Reset error after use in icon loads
	Fix crash when clicking play when no file is loaded